@startuml
skinparam Shadowing false
skinparam class {
    BackgroundColor PaleTurquoise 
    ArrowColor SeaGreen
}

package examination-context {
    package examination <<Aggregate>> {
        class Examination <<Aggregate Root>> {
            id: ExaminationId
            paper: Paper
            --
            {static} create(): Examination
        }
        class "Paper" as ep <<Value Object>> {
            name: String
            blankQuizzes: List<BlankQuiz>
        }
        class "BlankQuiz" as ebq <<Value Object>> {
            number: String
            score: int
        }
        Examination "1" *-- "1" ep
        ep "1" *-- "5..20" ebq
    }
}

package paper-context {
    package paper <<Aggregate>> {
        class Paper <<Aggregate Root>> {
            id: PaperId
            blankQuizzes: List<BlankQuiz>
            teacherId: String
            {static} assemble(): Paper
            reassemble()
        }

        class "BlankQuiz" as pbq <<Value Object>> {
                    id: String
                    score: int
                }
        Paper "1" *-- "5..20" pbq
    }

    package blankquiz <<Aggregate>> {
            class BlankQuiz <<Aggregate Root>> {
                id: BlankQuizId
                teacherId: String
                content: String
                referenceAnswer: String
                score: int
                createdTime: LocalDateTime
                updatedTime: LocalDateTime
                --
                {static} create(): BlankQuiz
                revise()
                delete()
            }
        }
}

package answersheet-context {
    package answersheet <<Aggregate>> {
        class AnswerSheet <<Aggregate Root>> {
            id: AnswerSheetId
            studentId: String
            examinationId: String
            score: int
            blankQuizzes: List<BlankQuiz>
            answerSheetItems: List<AnswerSheetItem>
            --
            {static} assign(): AnswerSheet
            submit()
            handIn()
            review()
        }
        class "AnswerSheetItem"  <<Value Object>> {
                number: int
                answer: String
                score: int
                }

        class "BlankQuiz" as ebb <<Value Object>> {
        number: int
        answer: String
        referenceAnswer：String
        score: int
        }


        AnswerSheet "1" *-- "5..20" ebb
        AnswerSheet "1" *-- "5..20" AnswerSheetItem
    }
}

package course-context {
    package course <<Aggregate>> {
        class Course <<Aggregate Root>> {
            id: CourseId
            videoLink: String
            examination: Examination
            status: CourseStatusEnum
            --
            {static} create(): Course
            update()
            publish()
        }

        class "Examination" as ce <<Value Object>> {
            id: String
            name: String
            description: String
        }
        Course "1" *-- "1" ce
    }
}

package certification-context {
    package certification <<Aggregate>> {
        class Certification <<Aggregate Root>> {
            id: CertificationId
            studentName: String
            course: Course
            {static} generate(): Certification
        }
        class "Course" as cc <<Value Object>> {
            courseName: String
            description: String
        }
        Certification "1" *-- "1" cc
    }
}

@enduml
